--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "host": "astro dev --host",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/react": "^2.2.1",
+    "@astrojs/sitemap": "^2.0.0",
     "@astrojs/tailwind": "^4.0.0",
+    "@fontsource-variable/roboto-mono": "^5.0.6",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-menubar": "^1.0.3",
     "@radix-ui/react-separator": "^1.0.3",
