--- a/package.json
+++ b/package.json
@@ -10,25 +10,28 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^2.2.1",
+    "@astrojs/react": "^2.3.2",
     "@astrojs/sitemap": "^2.0.0",
-    "@astrojs/tailwind": "^4.0.0",
+    "@astrojs/tailwind": "^5.0.2",
     "@fontsource-variable/roboto-mono": "^5.0.6",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-menubar": "^1.0.3",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "@sanity/astro": "^2.1.4",
+    "@sanity/client": "^6.9.0",
+    "@sanity/image-url": "^1.0.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "astro": "^2.8.3",
-    "astro-sanity": "^1.1.7",
+    "astro": "^3.6.0",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "lucide-react": "^0.260.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "sanity": "^3.20.2",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.6"
